# EECS467

./: README.md  ckpt301.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mbot_localization/include/: localization_utils.hpp  obstacle_distance_grid.hpp  particle_filter.hpp
install/mbot_localization/share/ament_index/resource_index/package_run_dependencies/: mbot_localization
install/mbot_localization/share/mbot_localization/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mbot_localization/share/mbot_localization/cmake/: mbot_localizationConfig.cmake
install/mbot_localization/share/mbot_localization/launch/: global_localization.launch.py
install/mbot_mapping/share/mbot_mapping/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mbot_nav/share/ament_index/resource_index/package_run_dependencies/: mbot_nav
install/mbot_nav/share/mbot_nav/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mbot_nav/share/mbot_nav/include/: navigation_node.hpp
install/mbot_nav/share/mbot_nav/maps/: ckpt3.pgm  ckpt3_new.yaml  ckpt3new.pgm  ckpt3new.yaml  maze1.pgm  maze1.yaml  maze2.pgm  mpl.yaml
install/mbot_nav/share/mbot_nav/rviz/: path_planning.rviz
install/mbot_slam/include/: action_model.hpp  sensor_model.hpp  slam_utils.hpp
install/mbot_slam/share/ament_index/resource_index/package_run_dependencies/: mbot_slam
install/mbot_slam/share/mbot_slam/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mbot_slam/share/mbot_slam/maps/: map_name.pgm  map_name.yaml
install/mbot_slam/share/mbot_slam/rviz/: slam.rviz
log/: latest_build
mbot_localization/: CMakeLists.txt  README.md
mbot_localization/include/: action_model.hpp  particle_filter.hpp  sensor_model.hpp
mbot_localization/launch/: dungeon_escape.launch.py  global_localization.launch.py
mbot_localization/rviz/: localization.rviz
mbot_localization/scripts/: pose_listener_node.py
mbot_localization/src/: action_model.cpp  global_localization_node.cpp  localization_node.cpp  obstacle_distance_grid.cpp  particle_filter.cpp  pose_listener_node.cpp  sensor_model.cpp
mbot_mapping/: CMakeLists.txt  README.md  package.xml
mbot_mapping/include/: mapping.hpp
mbot_mapping/launch/: mapping.launch.py  view_map.launch.py
mbot_mapping/maps/: 3_11.pgm  3_11.yaml  event3.pgm  event3.yaml
mbot_mapping/src/: mapping.cpp  mapping_node.cpp  moving_laser_scan.cpp
mbot_nav/: CMakeLists.txt  README.md  package.xml
mbot_nav/include/: astar.hpp  exploration_node.hpp  frontier_explorer.hpp  greedy_best_first.hpp  navigation_node.hpp
mbot_nav/launch/: maze_challenge.launch.py  path_planning.launch.py
mbot_nav/logs/: placeholder
mbot_nav/maps/: maze2.yaml
mbot_nav/rviz/: maze_exploration.rviz
mbot_nav/src/: astar.cpp  astar_test.cpp  exploration_node.cpp  fast_exploration_node.cpp  frontier_explorer.cpp  greedy_best_first.cpp  motion_controller_diff.cpp  navigation_node.cpp  obstacle_distance_grid.cpp
mbot_rosbags/: README.md  slam_test.yaml
mbot_rosbags/maze1/: metadata.yaml
mbot_rosbags/slam_test/: metadata.yaml
mbot_setpoint/: CMakeLists.txt  README.md  package.xml
mbot_setpoint/src/: motion_controller_diff.cpp  motion_controller_fast.cpp  motion_controller_plot.py  odom.cpp  pid_error_visualization.py  square_publisher.cpp
mbot_slam/: CMakeLists.txt  README.md  package.xml
mbot_slam/include/: action_model.hpp  mapping.hpp  moving_laser_scan.hpp  obstacle_distance_grid.hpp  particle_filter.hpp  sensor_model.hpp
mbot_slam/maps/: .placeholder
mbot_slam/rviz/: slam.rviz
mbot_slam/src/: action_model.cpp  fast_slam_node.cpp  mapping.cpp  moving_laser_scan.cpp  obstacle_distance_grid.cpp  particle_filter.cpp  sensor_model.cpp  slam_node.cpp
