<?xml version="1.0"?>
<package format="3">
  <name>mbot_setpoint</name>
  <version>0.0.0</version>
  <description>Setpoint Challenge</description>
  <maintainer email="xssun@umich.edu">Shaw Sun</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core runtime and build-time dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- Required for custom message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Optional: Add specific type support if needed -->
  <build_depend>rosidl_typesupport_fastrtps_cpp</build_depend>
  <exec_depend>rosidl_typesupport_fastrtps_cpp</exec_depend>

  <!-- Grouping -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Linting -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
